--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,8 @@
-@import './base.css';
+@import "./base.css";
 
 #app {
   width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   font-weight: normal;
 }
@@ -18,7 +17,8 @@ body {
   margin: 0;
   padding: 0;
   background: #fff;
-  font-family: 'Pretendard Variable', 'Pretendard', -apple-system, Roboto, Helvetica, sans-serif;
+  font-family: "Pretendard Variable", "Pretendard", -apple-system, Roboto,
+    Helvetica, sans-serif;
 }
 
 a {
