style: 회원가입 입력란 디자인 수정

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,6 +4,7 @@
   --tothezip-beige-01: #fff3e9;
   --tothezip-beige-02: #f9dfca;
   --tothezip-beige-04: #ebb78b;
+  --tothezip-beige-06: #e8b985;
   --tothezip-beige-07: #b68461;
   --tothezip-beige-08: #936049;
   --tothezip-beige-09: #6f3d32;
